# pandaria

./: .env.emerald.example  .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  PRD.md  README.md  VERSION.md  VERSIONS.md  docker-compose.emerald.yml  pandaria-test.sh
crates/agent-core/: Cargo.toml  README.md
crates/agent-core/src/: circuit_breaker.rs  compaction.rs  context.rs  error.rs  error_recovery.rs  events.rs  file_ops.rs  hook_dispatcher.rs  lib.rs  loop.rs  mutations.rs  provider_opts.rs  session.rs  space.rs  store.rs  test_utils.rs  tool.rs  types.rs  util.rs
crates/agent-core/src/harness/: agent_loop.rs  builder.rs  config.rs  error_recovery.rs  mod.rs  session.rs  strategy.rs  tool.rs
crates/agent-core/src/hook/: combined.rs  context.rs  default_dispatcher.rs  dispatcher.rs  mod.rs  mutations.rs  timeout.rs
crates/agent-core/src/memory/: emerald.rs  extractor.rs  formatter.rs  hook.rs  in_memory.rs  mod.rs  store.rs  types.rs
crates/agent-core/src/persistence/: entry.rs  mod.rs  store.rs
crates/agent-core/src/prompt/: builder.rs  builder_tests.rs  mod.rs  mutation.rs  types.rs  (+1 more)
crates/agent-core/tests/: compaction_tests.rs  e2e_provider_tests.rs  e2e_retry_tests.rs  e2e_tool_use_tests.rs  e2e_transform_tests.rs  hook_dispatcher_tests.rs  integration_emerald.rs  loop_integration_tests.rs  metrics_integration.rs  pawbun_integration.rs  recovery_integration_tests.rs  skills_integration_tests.rs  types_tests.rs
crates/ai-provider/: Cargo.toml  README.md
crates/ai-provider/src/: cache.rs  compat.rs  error.rs  http_error.rs  lib.rs  models.rs  models_data.rs  overflow.rs  provider.rs  resolver.rs  router.rs  test_utils.rs  transform.rs  types.rs  validation.rs
crates/ai-provider/tests/: anthropic_smoke.rs  anthropic_tests.rs  compat_tests.rs  google_tests.rs  models_tests.rs  oauth_tests.rs  overflow_tests.rs  repair_tests.rs  retry_tests.rs  security_tests.rs  types_serde.rs  validation_tests.rs
crates/api-gateway/: Cargo.toml  README.md
crates/api-gateway/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  sse.rs  tavern.rs  types.rs
crates/api-gateway/tests/: routes_tests.rs  sse_tests.rs
crates/extensions/: Cargo.toml  README.md
crates/extensions/src/: lib.rs
crates/extensions/tests/: builtin_audit_tests.rs  builtin_rate_limit_concurrent_tests.rs  builtin_rate_limit_tests.rs  builtin_tool_guard_tests.rs  event_bus_tests.rs  extension_actor_tests.rs  extension_manager_tests.rs  hook_router_compact_tests.rs  hook_router_mutation_tests.rs  hook_router_observation_tests.rs  hook_router_tests.rs  integration_agent_loop.rs  integration_compaction.rs  integration_extension_tool.rs  integration_lifecycle_hooks.rs  integration_multi_ext.rs  integration_multi_extension_session.rs  integration_provider_mutation.rs  integration_router.rs  integration_session.rs  integration_tool_execution_hooks.rs  integration_tool_interception.rs
crates/llm-client/: Cargo.toml  README.md
crates/llm-client/src/: cache.rs  compat.rs  error.rs  hooks.rs  lib.rs  models.rs  models_data.rs  oauth.rs  overflow.rs  provider.rs  repair.rs  retry.rs  streaming.rs  transform.rs  types.rs  util.rs  validation.rs
crates/llm-client/tests/: anthropic_smoke.rs  anthropic_tests.rs  bedrock_tests.rs  compat_tests.rs  google_tests.rs  models_tests.rs  oauth_tests.rs  openai_tests.rs  overflow_tests.rs  provider_requests.rs  repair_tests.rs  retry_tests.rs  security_tests.rs  streaming_tests.rs  transform_tests.rs  types_serde.rs  validation_tests.rs
crates/pawbun-files/: Cargo.toml  README.md
crates/pawbun-files/benches/: loader.rs
crates/pawbun-files/examples/: basic_usage.rs  batch_load.rs  constraints.rs  load_image.rs  provider_switching.rs
crates/pawbun-files/src/: constraints.rs  content.rs  file.rs  lib.rs  loader.rs  media.rs  provider.rs
crates/pawbun-files/tests/: integration_test.rs
crates/pawbun-mcp-server/: Cargo.toml  README.md
crates/pawbun-mcp-server/benches/: handler.rs
crates/pawbun-mcp-server/examples/: sse_server.rs  stdio_server.rs
crates/pawbun-mcp-server/src/: capabilities.rs  error.rs  handler.rs  lib.rs  server.rs  tool_bridge.rs
crates/pawbun-toolkit/: Cargo.toml  README.md
crates/pawbun-toolkit-macros/: Cargo.toml  README.md
crates/pawbun-toolkit-macros/examples/: basic_macro.rs  custom_input.rs
crates/pawbun-toolkit-macros/src/: lib.rs
crates/pawbun-toolkit/benches/: toolkit.rs
crates/pawbun-toolkit/examples/: basic_toolkit.rs  custom_tool.rs  docker_code_executor.rs  openai_embedding.rs  openai_vision.rs
crates/pawbun-toolkit/src/: async_tool.rs  error.rs  json_utils.rs  lib.rs  registry.rs  tool.rs  toolkit.rs  types.rs
crates/pawbun-toolkit/tests/: macros.rs
crates/session-store/: Cargo.toml  README.md
crates/session-store/src/: error.rs  lib.rs  postgres.rs
crates/session-store/tests/: integration_postgres.rs
crates/storage/: Cargo.toml  README.md
crates/storage/migrations/: 001_init.sql  002_session_status.sql  003_token_usage.sql
crates/storage/src/: lib.rs
crates/storage/tests/: integration_postgres.rs  integration_redis.rs  session_cleanup_tests.rs
crates/tavern-comp/: Cargo.toml  README.md
crates/tavern-comp/src/: agent.rs  context.rs  engine.rs  error.rs  event.rs  executor.rs  flow_executor.rs  handle.rs  instance.rs  lib.rs  registry.rs  replay.rs  store.rs  timer.rs  validator.rs  workflow.rs
crates/tavern-comp/tests/: pandaria_executor_integration.rs  proc_macro_integration.rs  session_cache_tests.rs
crates/tenant/: Cargo.toml  README.md
crates/tenant/src/: context.rs  error.rs  events.rs  lib.rs  manager.rs  meter.rs  registry.rs  session_entry.rs  supervisor.rs  tenant.rs
crates/tenant/tests/: integration.rs  manager.rs  quota.rs  quota_extension.rs  registry.rs  supervisor.rs  token_meter.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  autocomplete.rs  bash_mode.rs  clipboard.rs  command.rs  component.rs  config.rs  dev_token.rs  input_queue.rs  keybindings.rs  lib.rs  main.rs  markdown.rs  paste.rs  state.rs
crates/tui/tests/: integration.rs
(+312 files in other folders)
