[workspace]
resolver = "3"
members = [
    "crates/llm-client",
    "crates/agent-core",
    "crates/extensions",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
tokio-util = "0.7"

[package]
name = "pandaria"
version = "0.1.0"
edition = "2024"

[dependencies]
