[workspace]
resolver = "3"
members = [
    "crates/ai-provider",
    "crates/agent-core",
    "crates/extensions",
    "crates/storage",
    "crates/observability",
    "crates/tui",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
tokio-util = "0.7"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"

[package]
name = "pandaria"
version = "0.1.0"
edition = "2024"
default-run = "pandaria"

[dependencies]
tui = { path = "crates/tui" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "pandaria"
path = "src/main.rs"
