[workspace]
resolver = "3"
members = [
    "crates/ai-provider",
    "crates/agent-core",
    "crates/api-gateway",
    "crates/storage",
    "crates/tui",
    "crates/tenant",
    "crates/tavern-core",
    "crates/tavern-comp",
    "crates/tavern-flow-macros",
    "crates/pawbun-toolkit",
    "crates/pawbun-toolkit-macros",
    "crates/pawbun-files",
    "crates/pawbun-mcp-server",
    "crates/observability",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xnicholas/pandaria"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures = "0.3"
tokio-util = "0.7"
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
serde_yaml = "0.9"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
minijinja = "2"
hmac = "0.12"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "json"] }
notify = "7"
dotenvy = "0.15"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }

[package]
name = "pandaria"
version = "0.1.3"
edition = "2024"
default-run = "pandaria"

[dependencies]
tui = { path = "crates/tui" }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"

[[bin]]
name = "pandaria"
path = "src/main.rs"
