[package]
name = "agent-core"
version = "0.1.3"
edition = "2024"

[dependencies]
ai-provider = { path = "../ai-provider" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
pawbun-toolkit = { git = "https://github.com/0xnicholas/pawbun", branch = "main", default-features = false }

[features]
testing = []
pawbun-http = ["pawbun-toolkit/http"]

[dev-dependencies]
agent-core = { path = ".", features = ["testing"] }
ai-provider = { path = "../ai-provider", features = ["test-utils"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
tempfile = "3"
wiremock = "0.6"
secrecy = "0.10"
