[package]
name = "ai-provider"
version = "0.1.3"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["stream", "json"] }
bytes = "1"
eventsource-stream = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
regex = { workspace = true }
jsonschema = "0.28"
dashmap = { workspace = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
tokio-test = "0.4"
dotenvy = "0.15"

[[test]]
name = "anthropic_smoke"
path = "tests/integration/anthropic_smoke.rs"

[[test]]
name = "anthropic_tests"
path = "tests/integration/anthropic_tests.rs"

[[test]]
name = "bedrock_tests"
path = "tests/integration/bedrock_tests.rs"

[[test]]
name = "deepseek_tests"
path = "tests/integration/deepseek_tests.rs"

[[test]]
name = "google_tests"
path = "tests/integration/google_tests.rs"

[[test]]
name = "openai_tests"
path = "tests/integration/openai_tests.rs"

[[test]]
name = "provider_requests"
path = "tests/integration/provider_requests.rs"

[[test]]
name = "mistral_tests"
path = "tests/integration/mistral_tests.rs"

[[test]]
name = "openrouter_tests"
path = "tests/integration/openrouter_tests.rs"

[features]
bedrock = ["aws-sdk-bedrockruntime", "aws-config"]
test-utils = []
