[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true, features = ["sync", "rt", "macros", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
secrecy = { version = "0.10", features = ["serde"] }
dotenvy = "0.15"
tenant = { path = "../tenant" }
agent-core = { path = "../agent-core" }
ai-provider = { path = "../ai-provider" }
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "pandaria-server"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ai-provider = { path = "../ai-provider", features = ["test-utils"] }
tokio-tungstenite = "0.26"
reqwest = "0.12"
hex = "0.4"

[[test]]
name = "e2e_session_lifecycle"
path = "tests/e2e/e2e_session_lifecycle.rs"

[[test]]
name = "e2e_sse_events"
path = "tests/e2e/e2e_sse_events.rs"

[[test]]
name = "e2e_tool_use_http"
path = "tests/e2e/e2e_tool_use_http.rs"

[[test]]
name = "e2e_tenant_isolation"
path = "tests/e2e/e2e_tenant_isolation.rs"

[[test]]
name = "e2e_http_proxy_tool"
path = "tests/e2e/e2e_http_proxy_tool.rs"

[[test]]
name = "e2e_session_state"
path = "tests/e2e/e2e_session_state.rs"

[[test]]
name = "e2e_webhook"
path = "tests/e2e/e2e_webhook.rs"

[[test]]
name = "e2e_api_extensions"
path = "tests/e2e/e2e_api_extensions.rs"

[[test]]
name = "e2e_websocket"
path = "tests/e2e/e2e_websocket.rs"
