[package]
name = "api-gateway"
version = "0.1.3"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { workspace = true, features = ["sync", "rt", "macros", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
observability = { path = "../observability" }
secrecy = { version = "0.10", features = ["serde"] }
dotenvy = "0.15"
tenant = { path = "../tenant" }
agent-core = { path = "../agent-core" }
ai-provider = { path = "../ai-provider" }
tavern-core = { path = "../tavern-core" }
tavern-comp = { path = "../tavern-comp" }
reqwest = { version = "0.12", features = ["json"] }
aspectus-client = { path = "../../../Aspectus/crates/aspectus-client", optional = true }
aspectus-core = { path = "../../../Aspectus/crates/aspectus-core", optional = true }
urlencoding = "2"

[[bin]]
name = "pandaria-server"
path = "src/main.rs"

[features]
default = ["sqlite", "aspectus-auth"]
aspectus-auth = ["aspectus-client", "aspectus-core", "tenant/aspectus-auth"]
sqlite = ["tavern-comp/sqlite"]
postgres = ["tavern-comp/postgres"]
bundled-sqlite = ["tavern-comp/bundled-sqlite"]

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ai-provider = { path = "../ai-provider", features = ["test-utils"] }
tokio-tungstenite = "0.26"
reqwest = "0.12"
hex = "0.4"
tokio-util = { workspace = true }
storage = { path = "../storage" }
sqlx = "0.8"
redis = "0.27"

[[test]]
name = "e2e_session_lifecycle"
path = "tests/e2e/e2e_session_lifecycle.rs"

[[test]]
name = "e2e_sse_events"
path = "tests/e2e/e2e_sse_events.rs"

[[test]]
name = "e2e_tool_use_http"
path = "tests/e2e/e2e_tool_use_http.rs"

[[test]]
name = "e2e_tenant_isolation"
path = "tests/e2e/e2e_tenant_isolation.rs"

[[test]]
name = "e2e_http_proxy_tool"
path = "tests/e2e/e2e_http_proxy_tool.rs"

[[test]]
name = "e2e_session_state"
path = "tests/e2e/e2e_session_state.rs"

[[test]]
name = "e2e_webhook"
path = "tests/e2e/e2e_webhook.rs"

[[test]]
name = "e2e_api_extensions"
path = "tests/e2e/e2e_api_extensions.rs"

[[test]]
name = "e2e_websocket"
path = "tests/e2e/e2e_websocket.rs"

[[test]]
name = "e2e_persistence_recovery"
path = "tests/e2e/e2e_persistence_recovery.rs"

[[test]]
name = "e2e_persistence_compaction"
path = "tests/e2e/e2e_persistence_compaction.rs"

[[test]]
name = "e2e_persistence_fault_injection"
path = "tests/e2e/e2e_persistence_fault_injection.rs"

[[test]]
name = "e2e_concurrent_sessions"
path = "tests/e2e/e2e_concurrent_sessions.rs"

[[test]]
name = "e2e_memory_store"
path = "tests/e2e/e2e_memory_store.rs"

[[test]]
name = "e2e_path_guard"
path = "tests/e2e/e2e_path_guard.rs"

[[test]]
name = "e2e_media_provider"
path = "tests/e2e/e2e_media_provider.rs"

[[test]]
name = "e2e_rate_limit"
path = "tests/e2e/e2e_rate_limit.rs"

[[test]]
name = "e2e_token_budget"
path = "tests/e2e/e2e_token_budget.rs"

[[test]]
name = "e2e_builtin_tools"
path = "tests/e2e/e2e_builtin_tools.rs"

[[test]]
name = "e2e_aspectus_auth"
path = "tests/e2e/e2e_aspectus_auth.rs"
required-features = ["aspectus-auth"]

[[test]]
name = "e2e_aspectus_quotas"
path = "tests/e2e/e2e_aspectus_quotas.rs"
required-features = ["aspectus-auth"]

[[test]]
name = "e2e_aspectus_unavailable"
path = "tests/e2e/e2e_aspectus_unavailable.rs"
required-features = ["aspectus-auth"]
