[package]
name = "pawbun-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP Server for exposing Pawbun tools via Model Context Protocol"

[dependencies]

pawbun-toolkit = { path = "../pawbun-toolkit" }
pawbun-files = { path = "../pawbun-files" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "sync", "macros"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = ["http"]
http = ["dep:tokio", "dep:axum", "dep:tower-http", "dep:uuid", "dep:async-stream", "dep:futures"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "stdio_server"
path = "examples/stdio_server.rs"

[[example]]
name = "sse_server"
path = "examples/sse_server.rs"
required-features = ["http"]

[[bench]]
name = "handler"
harness = false
