[package]
name = "storage"
version = "0.1.0"
edition = "2024"
description = "General-purpose storage layer for pandaria"

[features]
default = ["postgres", "redis"]
postgres = ["sqlx"]
redis = ["dep:redis"]

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json"], optional = true }
redis = { version = "0.27", features = ["tokio-comp", "aio"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
ai-provider = { path = "../ai-provider" }
uuid = { workspace = true }
