[package]
name = "tenant"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
ai-provider = { path = "../ai-provider" }
extensions = { path = "../extensions" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
