[package]
name = "tenant"
version = "0.1.3"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
ai-provider = { path = "../ai-provider" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
observability = { path = "../observability" }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[features]
aspectus-auth = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
