[package]
name = "tui"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "pandaria-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
eventsource-stream = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
clap = { version = "4", features = ["derive", "env"] }
directories = "5"
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
arboard = "3"

[dev-dependencies]
wiremock = "0.6"
